--- a/composer.json
+++ b/composer.json
@@ -18,30 +18,14 @@
     ],
     "require": {
         "php": "^7.1",
-        "spatie/laravel-html": "^2.19.0",
         "appstract/laravel-blade-directives": "^1.6.0",
-        "illuminate/support": "^6.0|^7.0"
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0",
+        "spatie/laravel-html": "^2.19.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0|^9.0",
-        "orchestra/testbench": "^4.0|^5.0",
+        "orchestra/testbench": "^4.0 || ^5.0",
+        "phpunit/phpunit": "^8.0 || ^9.0",
         "symfony/dom-crawler": "^4.1"
-    },
-    "autoload": {
-        "psr-4": {
-            "MarvinLabs\\Html\\Bootstrap\\": "src/Bootstrap"
-        },
-        "files": [
-            "src/helpers.php"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "MarvinLabs\\Html\\Bootstrap\\Tests\\": "tests"
-        }
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit"
     },
     "config": {
         "sort-packages": true
@@ -55,5 +39,22 @@
                 "BS": "MarvinLabs\\Html\\Bootstrap\\Facades\\Bootstrap"
             }
         }
+    },
+    "autoload": {
+        "psr-4": {
+            "MarvinLabs\\Html\\Bootstrap\\": "src/Bootstrap"
+        },
+        "files": [
+            "src/helpers.php"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/",
+            "MarvinLabs\\Html\\Bootstrap\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
